examples/errors/arg_number_mismatch.alan
main(): proc
    foo(x: int): proc
    {
        
    }
{
    foo(42, 17);
}